@@ -218,10 +218,6 @@ is_deeply $array, ["\x{10346}"], 'successful roundtrip';
 $array = decode_json '["\\ud800\\udf46"]';
 is_deeply $array, ["\x{10346}"], 'decode [\"\\ud800\\udf46\"]';
 
-# Decode object with duplicate keys
-$hash = decode_json '{"foo": 1, "foo": 2}';
-is_deeply $hash, {foo => 2}, 'decode {"foo": 1, "foo": 2}';
-
 # Complicated roudtrips
 $bytes = '{"":""}';
 $hash  = decode_json $bytes;
