@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fix tests and document that Cpanel::JSON::XS now disallows duplicate keys in non-relaxed mode
 
 0.012     2016-06-30 17:44:11 EDT
   - Enable canonical option for all backends to match Mojo::JSON behavior in Mojolicious 6.58+
